--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+name: CI and Deploy
+
 on:
   pull_request:
   push:
@@ -8,14 +10,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Test
-        run: |
-          npm install
-          npm run test
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Start Vite server
+        run: npm run dev -- --host &
+        env:
+          NODE_ENV: development
+
+      - name: Wait for server to be ready
+        run: npx wait-on http://localhost:3001
+
+      - name: Run Cypress tests
+        run: npx cypress run
 
       - name: Deploy
-        # Only run this step if the branch is main
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && success()
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
