--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm install
+        run: npm run install
 
-      - name: Start Vite server
-        run: npm run dev -- --host &
+      - name: Start server and client
+        run: npm run develop &
         env:
           NODE_ENV: development
 
@@ -28,7 +28,7 @@ jobs:
         run: npx wait-on http://localhost:3001
 
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npm run test
 
       - name: Deploy
         if: github.ref == 'refs/heads/main' && success()
