added server logs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
         run: npm run develop &
         env:
           NODE_ENV: development
+      
+      - name: Check server logs
+        run: sleep 5 && curl http://localhost:3001 || echo "Server not responding after 5 seconds."  
 
       - name: Wait for server to be ready
         run: npx wait-on http://localhost:3001
